--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "alertifyjs": "^1.13.1",
+    "bootstrap": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "reactstrap": "^9.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
